# jj-yesod-translatable

./: LICENSE  README.md  doc  jj-yesod-translatable.cabal
Training/JoseJuan/Yesod/: Translatable.hs
Training/JoseJuan/Yesod/Translatable/: Persistence.hs  Routes.hs
Training/JoseJuan/Yesod/Translatable/Internal/: AppCache.hs  Cached.hs
doc/html/jj-yesod-translatable/: Training-JoseJuan-Yesod-Translatable.html  doc-index.html  index-frames.html  index.html  jj-yesod-translatable.haddock  mini_Training-JoseJuan-Yesod-Translatable.html
js/: jQuery-translatable-haskell.js
test/: TranslatableTest.hs
