name:              jj-yesod-translatable
version:           0.0.1
description:       Yesod Web Framework plugin to manage translatable content.
license:           MIT
license-file:      LICENSE
author:            Jose Juan
maintainer:        jose-juan@computer-mind.com
build-type:        Simple
cabal-version:     >= 1.8

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Training.JoseJuan.Yesod.Translatable
    other-modules:   Training.JoseJuan.Yesod.Translatable.Routes
                     Training.JoseJuan.Yesod.Translatable.Persistence
                     Training.JoseJuan.Yesod.Translatable.Internal.Cached
                     Training.JoseJuan.Yesod.Translatable.Internal.AppCache

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.2        && < 1.3
                 , text                          >= 0.11       && < 0.12
                 , persistent                    >= 1.2        && < 1.3
                 , containers                    >= 0.4.2.1
                 , stm                           >= 2.3
